mrpt (1:1.5.1-1) unstable; urgency=medium

  * Fix GCC hardening flags (Closes: #865735)

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Sat, 24 Jun 2017 15:00:00 +0200

mrpt (1:1.5.0-1) unstable; urgency=medium

  * New version of upstream sources.
  * Fix lintian error license-problem-convert-utf-code
  * Builds with newer GCC versions (Closes: #853563)

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Sun, 11 Jun 2017 00:06:13 +0200

mrpt (1:1.4.0-7) unstable; urgency=medium

  * Fix FTBFS in testing due to unit test crash related to eigenvectors
    calc in Eigen 3.3b1

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Mon, 15 Aug 2016 00:07:29 +0200

mrpt (1:1.4.0-6) unstable; urgency=medium

  * Fix FTBFS with latest eigen 3.3 beta 1 (Closes #834274).
  * Drop build-depends on subversion, no longer needed.

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Sun, 14 Aug 2016 13:51:20 +0200

mrpt (1:1.4.0-5) unstable; urgency=medium

  * Fix FTBFS in mips and other archs.

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Fri, 22 Jul 2016 15:38:29 +0200

mrpt (1:1.4.0-4) unstable; urgency=medium

  * Include patch to fix sparc64 SIGBUS error (Closes: #830741).
  * Include patch to fix hppa error (Closes: #830740)

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Fri, 22 Jul 2016 10:04:57 +0200

mrpt (1:1.4.0-3) unstable; urgency=medium

  * Fix FTBFS on sparc64 (Closes: #825846).

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Sun, 10 Jul 2016 00:07:40 +0200

mrpt (1:1.4.0-2) unstable; urgency=medium

  * Fix FTBFS (unit tests) in armhf (Closes: #825844).
  * Fix wrong "Breaks/Replace" fields (Closes: #807662).
  * Fix FTBFS on big endian due unit test errors (Closes: #825845).

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Fri, 08 Jul 2016 23:52:47 +0200
